force-app/main/default/objects/Job_Code_Permission_Set__mdt/Job_Code_Permission_Set__mdt.object-meta.xml
<CustomObject>
    <label>Job Code Permission Set</label>
    <pluralLabel>Job Code Permission Set</pluralLabel>
</CustomObject>