force-app/main/default/objects/Job_Code_Permission_Set__mdt/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>