force-app/main/default/objects/Job_Code_Permission_Set__mdt/fields/Job_Code_Setting__c.field-meta.xml
<CustomField>
    <fullName>Job_Code_Setting__c</fullName>
    <label>Job Code Setting</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>