force-app/main/default/objects/Job_Code_Permission_Set__mdt/fields/Permission_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_API_Name__c</fullName>
    <label>Permission API Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>